# bag-tool

./: .gitignore  draw_aruco.py  inspect_bags.py  install.sh  mock_align.py  pyproject.toml
src/bag_tool/: __init__.py  __main__.py  add_topics.py  align.py  altimeter.py  aruco_align.py  cli.py  config.py  convert_humble.py  convert_jazzy.py  processor.py  ros2_detect.py  trim.py  vio_check.py
